Week 1 changes based on write-up

--- a/week1.html
+++ b/week1.html
@@ -67,24 +67,46 @@
 
         <p>In my experience, there are a number of current issues with working with music data in areas such as:</p>
         <ul>
-            <li>Sharing digital sheet music</li>
-            <li>Accessing/distributing music</li>
-            <li>Curation of music</li>
+            <li>Accessing data</li>
+            <li>Creating data</li>
+            <li>Distributing music and music-related information</li>
+            <li>Analysing music and sound</li>
+            <li>Curating music data</li>
         </ul>
 
-        <h3>Issues with Sharing Digital Sheet Music</h3>
+        <h3>Issues with Access</h3>
         <ul>
+            <li>One main form of music data is digital sheet music.</li>
             <li>Digital sheet music data has many different standards (e.g. MIDI, MusicXML, proprietary file types like Sibelius&apos;s .sib or Musescore&apos;s .mscz format.</li>
             <li>Usually to share a piece of music data, a format must be converted to another standard which both softwares can understand and can convert to their own native format (e.g. sharing music between Sibelius and Musescore usually involves first converting to MusicXML, which both softwares can read and convert themselves).</li>
-            <li>Quartet: The sheet music may not be easily available in  a standard digital format which can be read by certain softwares - the piece was written long before the time of digital scores and, therefore, before the standards where many modern pieces can be found in.</li>
+            <li>Some scores such as scans of original manuscripts are only available in PDF format. These are difficult to convert to notation software formats and require the use of complex technologies such as optical recognition.</li>
+            <li>Quartet: The sheet music may not be easily available in  a standard digital format which can be read by certain softwares - the piece was written long before the time of digital scores and, therefore, before the standards where many modern pieces can be found in. Original manuscripts may not be in a flawless quality, and may have artefacts or scanning defects.</li>
         </ul>
 
-        <h3>Issues with Access/Distribution</h3>
+        <h3>Issues with Creation</h3>
+        <ul>
+            <li>There are many standards in use for the creation of music data.</li>
+            <li>Creating this data is complex, as there are many ways to describe a piece of music.</li>
+            <li>Versions of the same piece can vary drastically in attributes such as scan/audio quality, technical accuracy, and subjective interpretations of the piece (e.g. performance interpretation, sheet music notes, etc.).</li>
+            <li>Quartet: It is difficult to create objective information that would apply to all performances of the piece, as some performances may be louder/quieter, shorter/longer in duration, have different instrumentation, etc.</li>
+        </ul>
+
+        <h3>Issues with Distribution</h3>
         <ul>
             <li>Online libraries such as IMSLP contain many different versions of the same piece.</li>
-            <li>Versions can vary drastically in attributes such as scan/audio quality, technical accuracy, and subjective interpretations of the piece (e.g. performance interpretation, sheet music notes, etc.).</li>
             <li>This can be challenging for a person to choose the version they want to learn/listen to/analyse because of this variation between sources.</li>
-            <li>Quartet: Many versions of the suite can be found online or in libraries, a person who wishes to listen to the suite must choose from many different recordings, sheet music, interpretations, etc.</li>
+            <li>To listen to the piece, can choose from one of many services, such as streaming services or download libraries.</li>
+            <li>Many complex technologies are involved in providing this media to end-users.</li>
+            <li>Copyright law is inconsistent and subjective. The rules and regulations surrounding this area are constantly changing and updating.</li>
+            <li>Quartet: Many versions of the suite can be found online or in libraries, a person who wishes to listen to the suite must choose from many different recordings, sheet music, interpretations, etc. Despite being in the public domain, some performances are still copyrighted as they can be considered the intellectual property of the performing ensemble. Issues arise with the distribution of such copyrighted works.</li>
+        </ul>
+
+        <h3>Issues with Analysis</h3>
+        <ul>
+            <li>There are many ways to analyse a piece of music.</li>
+            <li>The different analysis techniques can represent different kinds of music information.</li>
+            <li>It is a complex task to produce a comprehensive analysis of a piece of music as there is no one technique which can be used to easily and clearly reveal every detail of a piece of music.</li>
+            <li>Quartet: The piece can be difficult to analyse as many performances exist. Many techniques can be used to compare different versions/performances of the piece. These techniques can be used to derive trends in performances, as well as any significant outliers.</li>
         </ul>
 
         <h3>Issues with Curation</h3>
